<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_INPUTS_WaterTreatment_RND" Id="{06be4762-47bf-4a81-b546-8243aa9d4c5a}">
    <Declaration><![CDATA[TYPE ST_INPUTS_WaterTreatment_RND :
STRUCT
	
	//stSequenceManager: ST_INPUTS_SequenceManager_DM;
	//stPump_CleanWaterPumpA: ST_INPUTS_PumpVSD;
	stUnit_RO_EDI: ST_INPUTS_Unit_RO_EDI;
	//stValve_DM1_Supply: ST_INPUTS_ValveOnOFF;
	
	stSequenceManager: 	ST_INPUTS_SequenceManager_RND_DM;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>