<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_INPUTS_SequenceManager_DM" Id="{14ebc056-5d19-45fe-b245-c7406185ec13}">
    <Declaration><![CDATA[TYPE ST_INPUTS_SequenceManager_DM:
STRUCT
	
	Sequence_Selected: E_SequenceList_DM;
	Sequence_Command: E_SequenceState;
	Sequence_Ack_Interlock: BOOL;
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>